# quantisti-options-trading

./: .env.development  .env.example  .env.production  Hypothesis4_Energy_Model_With_Insights.ipynb  Hypothesis4_Energy_Prediction_Model.ipynb  LICENSE  README.md  TESTING.md  TESTING_STRATEGY_SIMULATOR.md  docker-compose.db.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  response.json  test_market_api.ps1
.github/workflows/: ci.yml  deploy-cloudrun.yml
docs/: architecture.md  devops.md  getting-started.md  security-rbac.md  strategy-engine.md
infra/cloudrun/: README.md
infra/docker/: README.md
infra/terraform/: README.md
landing/: README.md  package-lock.json  package.json  tailwind.config.js
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: About.tsx  CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Pricing.tsx  ThemeToggle.tsx
schema/: README.md
schema/sql/: 001_create_tables.sql  002_seed_rbac.sql  003_sample_users.sql  004_market_data.sql  005_strategy_simulator.sql  006_more_strategies.sql  006_paper_trading.sql  007_multi_expiry.sql
scripts/: alpha_vantage_collector.py  db_apply.sh  dev_down.sh  dev_up.sh  mock_quote_publisher.py  nse_option_chain_collector.py  populate_nifty_data.py  test_market_api.sh  yahoo_collector.py
services/explain/: Dockerfile  README.md  pyproject.toml
services/explain/app/: __init__.py  main.py
services/explain/app/routers/: __init__.py  health.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/app/: __init__.py  main.py
services/gateway/app/auth/: README.md
services/gateway/app/routers/: __init__.py  health.py
services/market/: Dockerfile  README.md  pyproject.toml
services/market-stream/: Dockerfile  README.md  pyproject.toml
services/market-stream/app/: __init__.py  broadcaster.py  config.py  dependencies.py  main.py  schemas.py  storage.py
services/market-stream/app/routers/: __init__.py  health.py  quotes.py  stream.py
services/market/app/: __init__.py  config.py  main.py
services/market/app/db/: __init__.py  connection.py
services/market/app/models/: __init__.py  market_data.py  options.py
services/market/app/routers/: __init__.py  health.py  nifty.py  options.py
services/market/app/services/: __init__.py  black_scholes.py  data_provider.py  greeks.py
services/ml/: DEVELOPMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  pyproject.toml  test_calculators.py
services/ml/app/: __init__.py  config.py  main.py
services/ml/app/calculators/: __init__.py  price_calculator.py  technical_calculator.py  volatility_calculator.py
services/ml/app/models/: features.py
services/ml/app/routers/: __init__.py  features.py  health.py
services/ml/app/services/: feature_service.py  market_client.py
services/ml/migrations/: 001_create_weekly_features_table.sql
services/portfolio/: Dockerfile  README.md  pyproject.toml
services/portfolio/app/: __init__.py  main.py
services/portfolio/app/routers/: __init__.py  health.py
services/simulator/: Dockerfile  README.md  pyproject.toml
services/simulator/app/: __init__.py  config.py  dependencies.py  main.py
services/simulator/app/db/: connection.py
services/simulator/app/models/: backtest.py  metrics.py  paper.py  strategy.py  strategy_live.py
services/simulator/app/routers/: __init__.py  backtests.py  health.py  live_strategies.py  paper.py  strategies.py
services/simulator/app/services/: backtest_engine.py  market_client.py  market_stream_client.py  metrics_calculator.py  paper_store.py  strategy_builder.py
services/stats/: Dockerfile  README.md  pyproject.toml
services/stats/app/: __init__.py  main.py
services/stats/app/routers/: __init__.py  health.py
services/strategy-dashboard/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
services/strategy-dashboard/app/: globals.css  layout.tsx  page.tsx
services/strategy-dashboard/app/paper/: page.tsx
services/strategy-dashboard/components/: GreekStats.tsx  MarginInsights.tsx  OptionBreakdown.tsx  PayoffChart.tsx  StrategySummary.tsx  StrategyTable.tsx  ThemeToggle.tsx
services/strategy-dashboard/data/: mockDashboard.ts
