[project]
name = "ml"
version = "0.1.0"
description = "Machine learning and feature engineering service for the Quantisti options trading platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "psycopg2-binary",
    "pandas",
    "numpy",
    "httpx",
    "python-dateutil",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
