[project]
name = "simulator"
version = "0.1.0"
description = "Strategy simulator service for the Quantisti options trading platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.25.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
